# omniclaw

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_ES.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/logos/: README.md
src/: lib.rs  main.rs
src/container/: mod.rs
src/core/: config.rs  finding.rs  mod.rs  severity.rs
src/crypto/: encryption.rs  hash.rs  mod.rs
src/defensive/: mod.rs
src/github/: mod.rs
src/mcp/: main.rs
src/offensive/: mod.rs
src/output/: json.rs  mod.rs  sarif.rs  text.rs
src/pr_guard/: mod.rs
src/remediation/: mod.rs
src/rules/: cicd.rs  mod.rs  workflow_security.rs
src/rules_engine/: mod.rs
src/sbom/: mod.rs
src/scanner/: local.rs  mod.rs  remote.rs
src/secrets/: mod.rs
src/threat_intel/: mod.rs
